chore: Migration to Java 24 for benchmark project, ref: NOISSUE